# cpp-firmware-loader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config_files/config/Devices/AVR/: atmega328p.json
includes/: intelhexclass.cpp  intelhexclass.h
src/commandline/: parse.h
src/json/: ConfigManager.cpp  ConfigManager.h  configFinder.cpp  configFinder.h  deviceParser.cpp  deviceParser.h
src/loader/: DataSendManager.cpp  DataSendManager.h  HexReader.cpp  HexReader.h
src/serial/: AbstractSerial.h  Serial.h  SerialImpl.cpp  SerialImpl.h
src/units/: Byte.h  IECprefix.h  SIUnit.cpp  SIUnit.h
src/units/parse/: unitParser.h
src/utils/: EnvironmentChecks.h  RatioLookup.h  SerialUtils.h  enum_constants.h  expected.h  fileUtils.cpp  fileUtils.h  printUtils.h  utils.h
test/: TestConfigFinder.cpp  TestConfigManager.cpp  TestHexReader.cpp  TestIntelHex.cpp  TestSerial.cpp
test/testClasses/: SerialTestImpl.cpp  SerialTestImpl.h
